--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,10 @@ git+https://github.com/Rapptz/discord.py@rewrite#egg=discord.py[voice]
 discord.Py
 asyncio
 config
+bs4
+nltk
+unidecode
+aiodns
+cchardet
+colorama
+lomond
